--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
  <body>
   <div class="container">
    <div class="logo">
-    <img alt="Logo with two overlapping 'C' letters" height="100" src="https://storage.googleapis.com/a1aa/image/YBLohgQpajJeLyXVfjoSYO0cOjYrpSLac7WeXiHhhmpArBjnA.jpg" width="100"/>
+    <img alt="Logo with two overlapping 'C' letters" height="100" src="" width="100"/>
    </div>
    <div class="form-container">
     <input placeholder="nama" type="text"/>
