--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
  <head>
-  <title>
-   Login Page
-  </title>
+  <title>Login Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
    body {
             margin: 0;
@@ -62,6 +61,36 @@
             color: #333;
             font-size: 14px;
         }
+
+        /* Media Query untuk perangkat besar (desktop) */
+        @media (min-width: 768px) {
+            .form-container {
+                width: 400px;
+                padding: 30px;
+            }
+            .logo img {
+                width: 120px;
+            }
+            .form-container button {
+                width: 40%;
+                font-size: 18px;
+            }
+        }
+
+        /* Media Query untuk perangkat kecil (mobile) */
+        @media (max-width: 480px) {
+            .form-container {
+                width: 90%;
+                padding: 15px;
+            }
+            .logo img {
+                width: 80px;
+            }
+            .form-container button {
+                width: 100%;
+                margin: 5px 0;
+            }
+        }
   </style>
  </head>
  <body>
@@ -72,18 +101,12 @@
    <div class="form-container">
     <input placeholder="nama" type="text"/>
     <input placeholder="npm" type="text"/>
-    <button>
-     Daftar
-    </button>
-    <button>
-     masuk
-    </button>
-    <span class="login-link">
-     sudah punya akun?
-    </span>
+    <button>Daftar</button>
+    <button>Masuk</button>
+    <span class="login-link">Sudah punya akun?</span>
    </div>
    <div class="register-link">
-    buat akun untuk melanjutkan
+    Buat akun untuk melanjutkan
    </div>
   </div>
  </body>
