--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
  <head>
   <title>Login Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+
   <style>
    body {
             margin: 0;
