--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
   <title>Login Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
