--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
  <head>
   <title>Login Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
-
   <style>
    body {
             margin: 0;
@@ -52,8 +49,9 @@
             font-size: 16px;
             cursor: pointer;
         }
-        .form-container button:hover {
-            background-color: #e6831a;
+        .form-container button:disabled {
+            background-color: #aaa;
+            cursor: not-allowed;
         }
         .form-container .login-link {
             display: block;
@@ -66,36 +64,6 @@
             color: #333;
             font-size: 14px;
         }
-
-        /* Media Query untuk perangkat besar (desktop) */
-        @media (min-width: 768px) {
-            .form-container {
-                width: 400px;
-                padding: 30px;
-            }
-            .logo img {
-                width: 120px;
-            }
-            .form-container button {
-                width: 40%;
-                font-size: 18px;
-            }
-        }
-
-        /* Media Query untuk perangkat kecil (mobile) */
-        @media (max-width: 480px) {
-            .form-container {
-                width: 90%;
-                padding: 15px;
-            }
-            .logo img {
-                width: 80px;
-            }
-            .form-container button {
-                width: 100%;
-                margin: 5px 0;
-            }
-        }
   </style>
  </head>
  <body>
@@ -104,9 +72,11 @@
     <img alt="Logo with two overlapping 'C' letters" height="100" src="https://storage.googleapis.com/a1aa/image/YBLohgQpajJeLyXVfjoSYO0cOjYrpSLac7WeXiHhhmpArBjnA.jpg" width="100"/>
    </div>
    <div class="form-container">
-    <input placeholder="nama" type="text"/>
-    <input placeholder="npm" type="text"/>
-    <button>Daftar</button>
+    <input id="nama" placeholder="nama" type="text"/>
+    <input id="npm" placeholder="npm" type="text"/>
+    <a id="btn-daftar" href="https://pixelartt.github.io/laman-dasbor/" target="_blank">
+      <button disabled>Daftar</button>
+    </a>
     <button>Masuk</button>
     <span class="login-link">Sudah punya akun?</span>
    </div>
@@ -114,5 +84,21 @@
     Buat akun untuk melanjutkan
    </div>
   </div>
+  <script>
+    const namaInput = document.getElementById('nama');
+    const npmInput = document.getElementById('npm');
+    const daftarButton = document.querySelector('#btn-daftar button');
+
+    function toggleDaftarButton() {
+        if (namaInput.value.trim() !== '' && npmInput.value.trim() !== '') {
+            daftarButton.disabled = false;
+        } else {
+            daftarButton.disabled = true;
+        }
+    }
+
+    namaInput.addEventListener('input', toggleDaftarButton);
+    npmInput.addEventListener('input', toggleDaftarButton);
+  </script>
  </body>
 </html>
